Google form added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                         hic numquam illum. Consequuntur porro voluptates similique. </p>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima soluta ratione ullam labore
                         fugit enim numquam. Sed ea culpa ipsum.</p>
-                    <a class="button" onclick="location.href='mailto:divyansh2998@icloud.com'">Mail Me</a>
+                    <a class="button" onclick="location.href='https://docs.google.com/forms/d/1wY65uwqLLJkycz1zqZHtsJHrgpYaqYJuaqYxmfN0csw/viewform?ts=5baf2572&edit_requested=true'">JOIN
+                        US</a>
                 </div>
             </div>
             <div class="row">
