--- a/index.html
+++ b/index.html
@@ -22,12 +22,9 @@
                     </div>
                     <h1>Droid Delhi</h1>
                     <h2>Community | Club</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis magni porro fugiat
-                        accusamus officia neque corporis ab hic aut fuga, commodi accusantium odio at, nihil eligendi
-                        harum quos adipisci laudantium quia voluptatem, expedita velit quod debitis! Nobis reiciendis
-                        hic numquam illum. Consequuntur porro voluptates similique. </p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima soluta ratione ullam labore
-                        fugit enim numquam. Sed ea culpa ipsum.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis magni porro fugiat accusamus officia neque corporis ab hic aut fuga, commodi accusantium odio at, nihil eligendi harum quos adipisci laudantium quia voluptatem, expedita
+                        velit quod debitis! Nobis reiciendis hic numquam illum. Consequuntur porro voluptates similique. </p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima soluta ratione ullam labore fugit enim numquam. Sed ea culpa ipsum.</p>
                     <a class="button" onclick="location.href='https://docs.google.com/forms/d/1wY65uwqLLJkycz1zqZHtsJHrgpYaqYJuaqYxmfN0csw/viewform?ts=5baf2572&edit_requested=true'">JOIN
                         US</a>
                 </div>
@@ -70,19 +67,19 @@
             </div>
             <ul class="footerLinks">
                 <li>
-                    <a href="">Twitter</a>
+                    <a href="https://twitter.com/DroidDelhi">Twitter</a>
                 </li>
                 <li>
-                    <a href="">Linkedin</a>
+                    <a href="https://www.linkedin.com/company/droid-delhi/">Linkedin</a>
                 </li>
                 <li>
-                    <a href="">Github</a>
+                    <a href="https://github.com/DroidDelhi">Github</a>
                 </li>
                 <li>
-                    <a href="">Gitter</a>
+                    <a href="gitter.im/Droid-Delhi">Gitter</a>
                 </li>
                 <li>
-                    <a href="">Contact</a>
+                    <a href="mailto:droiddelhi@gmail.com">Contact</a>
                 </li>
             </ul>
             <!-- <button onclick="location.href='mailto:jwv.gib@gmail.com';" class="button-primary ">Contact Me</button> -->
