--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                     <a href="gitter.im/Droid-Delhi">Gitter</a>
                 </li>
                 <li>
+                    <a href="https://medium.com/@droiddelhi">Medium</a>
+                </li>
+                <li>
                     <a href="mailto:droiddelhi@gmail.com">Contact</a>
                 </li>
             </ul>
