--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
                     </div>
                     <h1>Droid Delhi</h1>
                     <h2>Community | Club</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis magni porro fugiat accusamus officia neque corporis ab hic aut fuga, commodi accusantium odio at, nihil eligendi harum quos adipisci laudantium quia voluptatem, expedita
-                        velit quod debitis! Nobis reiciendis hic numquam illum. Consequuntur porro voluptates similique. </p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima soluta ratione ullam labore fugit enim numquam. Sed ea culpa ipsum.</p>
+                    <p>Welcome to Droid Delhi </p>
+                    <p>We expect to bring in developers together from all over Delhi and help them grow mutually! We welcome you all to this community and hope through this, each one of you can learn something and make the best out of it !</p>
                     <a class="button" onclick="location.href='https://docs.google.com/forms/d/1wY65uwqLLJkycz1zqZHtsJHrgpYaqYJuaqYxmfN0csw/viewform?ts=5baf2572&edit_requested=true'">JOIN
                         US</a>
                 </div>
